# minexcel

./: .gitignore  404.html  index.html  justfile  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: release.yaml
docs/: index-CN.md  index.md  reference.md
index-CN/: index.html
reference/: index.html
search/: search_index.json
src/minexcel/: __init__.py  block.py  utils.py
tests/: test_block.py  test_utils.py
tests/files/: data.xlsx  data1.xlsx  data2.xlsx  template.xlsx
tests/snapshots/: snap_test_block.py
