[project]
name = "minexcel"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openpyxl>=3.1.5", "pandas>=2.3.1"]

[project.scripts]
minexcel = "minexcel:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ipykernel>=6.30.1", "mypy>=1.17.1", "pytest>=8.4.1", "ruff>=0.12.8"]
